# korean-site

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  dump.rdb  manage.py  pyproject.toml  requirements.txt  setup.cfg
account/: admin.py  backend.py  forms.py  models.py  repositories.py  repository.py  services.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_first_name_and_more.py  0003_alter_customuser_email.py  0004_customuser_slug.py  0005_alter_customuser_slug.py  0006_alter_customuser_slug.py  0007_followingusers.py  0008_customuser_date_of_birth.py  0009_customuser_last_online.py  0010_customuser_last_interaction.py  0011_remove_customuser_last_interaction_and_more.py  0012_customuser_last_interaction.py  0013_alter_followingusers_user_onlineuser.py  0014_alter_onlineuser_options_and_more.py  0015_teacher.py
account/templates/: edit_profile.html  profile.html  reset_password.html  singin.html  singup.html
base/: repository.py  service.py  tasks.py  urls.py  views.py
base/templates/: base.html  index.html
course/: admin.py  choices.py  models.py  repository.py  service.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_remove_word_transcription.py  0003_course_slug_dictionarycourse_slug_and_more.py  0004_alter_course_slug_alter_dictionarycourse_slug_and_more.py  0011_moduleuser.py  (+8 more)
events/: admin.py  models.py  repository.py  service.py
korean_site/: asgi.py  settings.py  wsgi.py
project_root/: celery.py  settings.py  urls.py
(+22 files in other folders)
